# monitor-ai-bot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Frontend Workspace 使用说明.md  README.md  Readme.v1.md  Readme.v2.md  Readme.v3.md  Readme.v4.md  Readme.v5.md  Readme.v6.md  config.toml  package-lock.json  package.json
api-server/: Cargo.toml
api-server/src/: main.rs
bot-host/: Cargo.toml
bot-host/src/: main.rs
clients/agent-probe/: .env  Cargo.toml
clients/agent-probe/src/: main.rs
clients/desktop-client/src/: App.tsx
clients/desktop-client/src-tauri/: tauri.conf.json
clients/mobile-client/: App.tsx  package-lock.json  package.json
clients/ui/: package-lock.json  package.json
clients/ui/components/: AlertList.tsx  MetricOverview.tsx
clients/ui/hooks/: useAlerts.ts  useMetrics.ts
clients/ui/workflow-designer/: Canvas.tsx  NodePanel.tsx  PropertyPanel.tsx  WorkflowDesigner.tsx  WorkflowEditor.tsx  index.ts
clients/ui/workflow-designer/custom-nodes/: ApiNode.ts  ConditionNode.ts  StartNode.ts  index.ts
clients/ui/workflow-designer/pages/: WorkflowDetailPage.tsx  WorkflowListPage.tsx  WorkflowManagementPage.tsx
clients/ui/workflow-designer/store/: workflowStore.ts
clients/web-client/src/: App.tsx
core-types/: Cargo.toml
core-types/src/: lib.rs
dashboard-frontend-react/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
dashboard-frontend-react/src/: App.css  App.tsx  index.css  main.tsx  plugin-registry.ts
dashboard-frontend-react/src/components/: MetricChart.tsx  PageCard.tsx
dashboard-frontend-react/src/layout/: DashboardLayout.tsx  Sidebar.tsx  Topbar.tsx
dashboard-frontend-react/src/pages/: AgentsPage.tsx  AlertsPage.tsx  DashboardHome.tsx  LogsPage.tsx  MetricsPage.tsx  PluginsPage.tsx  SettingsPage.tsx  WorkflowManagement.tsx
dashboard-frontend-react/src/pages/workflows/: WorkflowDetailPage.tsx  WorkflowListPage.tsx
dashboard-frontend-react/src/plugins/: frontend-plugin-registry.ts  loader.ts  plugin-registry.ts  registry.ts  types.ts
dashboard-frontend-react/src/plugins/workflow/: WorkflowPluginPage.tsx  index.tsx
dashboard-frontend-react/src/plugins/workflow-designer/: entry.ts
dashboard-frontend-react/src/routes/: routes.tsx  workflow-designer.tsx
dashboard-frontend-react/src/store/: workflowStore.ts
dashboard-frontend-react/src/styles/: layout.css
devops/: .env  docker-compose.yml
plugin-api/src/: lib.rs
plugins/agent-aggregator/: Cargo.toml
plugins/agent-aggregator/src/: lib.rs
plugins/ai-analyzer/: Cargo.toml
plugins/ai-analyzer/src/: lib.rs
plugins/api-monitor/: Cargo.toml
plugins/api-monitor/src/: lib.rs
plugins/cpu-monitor/: Cargo.toml
plugins/cpu-monitor/src/: lib.rs
plugins/notification-center/: Cargo.toml  Readme.md  Remadme.md
plugins/notification-center/src/: db.rs  lib.rs  metrics_bridge.rs  risk_guard.rs  router.rs  template.rs  types.rs
plugins/notification-center/src/channel/: dingtalk.rs  email.rs  inbox.rs  mod.rs  push.rs  sms.rs  wecom.rs
plugins/timer-scheduler_system_plugin/: Cargo.toml  Readme.md
plugins/timer-scheduler_system_plugin/src/: lib.rs
plugins/workflow-engine_system_plugin/: Cargo.toml
plugins/workflow-engine_system_plugin/src/: lib.rs
storage/: Cargo.toml
storage/migrations/: schema_mysql.sql  schema_postgres.sql  schema_sqlite.sql
storage/src/: db_config.rs  init.rs  lib.rs
workflow-core/: Cargo.toml
workflow-core/src/: lib.rs
workflows/: api-monitor.toml
workflows/api-monitor/: login_and_get_profile.json
