[workspace]
members = [
    "bot-host", "core-types",
    "plugin-api",
    "plugins/cpu-monitor",
    "core-types",     
    "storage",
    "api-server",
    "plugins/ai-analyzer", 
    "workflow-core",
    "plugins/api-monitor", "clients/agent-probe", "plugins/agent-aggregator",
]

# 适配 edition 2024，顺便把刚才那个 warning 消掉
resolver = "3"
