[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

core-types = { path = "../core-types" }
storage = { path = "../storage" }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

tower-http = { version = "0.5", features = ["cors"] }  # 新增
http = "1"           # 一般已经有，没有就加上