[package]
name = "bot-host"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8"
plugin-api = { path = "../plugin-api" }
core-types = { path = "../core-types" }
storage = { path = "../storage" }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
