[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["fs", "macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "macros", "mysql", "postgres", "any","migrate"] }
dotenv = "0.15"
core-types = { path = "../core-types" }
chrono = "0.4"
serde_json = "1.0"