[package]
name = "workflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }