[package]
name = "agent-probe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sysinfo = "0.30"     # 用来采集 CPU / 内存 / 磁盘 信息
dotenvy = "0.15"     # 读取本机 .env
anyhow = "1"