[package]
name = "ai-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-api = { path = "../../plugin-api" }
core-types = { path = "../../core-types" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15"
