[package]
name = "api-monitor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-api = { path = "../../plugin-api" }
workflow-core = { path = "../../workflow-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
toml = "0.8"


tokio = { version = "1", features = ["full"] }
axum = "0.7"