[package]
name = "notification-center"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-api = { path = "../../plugin-api" }

tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
axum  = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono"
]}
thiserror = "1"
rand = "0.8"
